--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,7 +1,8 @@
-<article class="example">
+<!--<article class="example">
   <h1>HTML-фрагменты</h1>
 
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
+<!--
   <img src="images/demo.jpg" alt="" width="320" />
   <p>
     Плагин
@@ -31,3 +32,4 @@
 
   <div class="background"></div>
 </article>
+-->
