--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,9 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+
+@import './utils/variables';
+@import './utils/common';
+@import './utils/functions';
+
+@import './components/modal-auth';
