add popup Login

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,10 +12,11 @@ $primary-text-color: #000;
 $secondary-text-color: #fff;
 $thirty-text-color: #545454;
 $accent-text-color: #ff6b08;
+$warning-text-color: #ff001b;
 // ==================================================================
 
 // background colors
-$primary-bg-color: #e5e5e5;
+$primary-bg-color: #fff;
 $secondary-bg-color: #f7f7f7;
 $accent-bg-color: #ff6b08;
 $hover-accent-bg-color: #ff6b01;
