--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,13 +1,15 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './base/variables';
+@import './base/_modern-normalize.min.scss';
+@import './base/common';
+@import './base/container';
+@import './base/visually-hidden';
 
-// Стили для файла с примером HTML-фрагмента
-//@import './example';
 
-@import './utils/variables';
-@import './utils/common';
-@import './utils/functions';
+@import './layout/main';
 
-@import './components/modal-auth';
+
+
+
+
+@import './components/loader';
+
