add Infomessage  to popup

--- a/src/partials/modal-auth.html
+++ b/src/partials/modal-auth.html
@@ -12,7 +12,7 @@
     <form class="modal-login__form active">
       <h2 class="form__title">Log in</h2>
 
-      <div class="form__element"><p></p></div>
+      <div class="form__element message"></div>
       <div class="form__element">
         <label class="form__label" for="email">Email</label>
         <input
@@ -49,6 +49,7 @@
     <form class="modal-signup__form" id="signup">
       <h2 class="form__title">Sign up</h2>
 
+      <div class="form__element message"></div>
       <div class="form__element">
         <label class="form__label" for="email">Email</label>
         <input
@@ -63,7 +64,7 @@
       <div class="form__element">
         <label class="form__label" for="password">Password</label>
         <input
-          class="form__input"
+          class="form__input password-one"
           id="password"
           type="password"
           name="password"
@@ -74,7 +75,7 @@
       <div class="form__element">
         <label class="form__label" for="password"></label>
         <input
-          class="form__input"
+          class="form__input password-two"
           id="password"
           type="password"
           name="password"
