--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -19,10 +19,12 @@ $primary-bg-color: #e5e5e5;
 $secondary-bg-color: #f7f7f7;
 $accent-bg-color: #ff6b08;
 $hover-accent-bg-color: #ff6b01;
+$overlay-bg-color: rgba(0,0,0, .56);
+$error-color: #FF001B;
 // ==================================================================
 
 // animations
-//$primary-animation: cubic-bezier();
+$primary-animation: cubic-bezier(0.4, 0, 0.2, 1);
 //secondary-animation: cubic-bezier();
 // ==================================================================
 
