--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,9 +5,13 @@
 
 // Стили для файла с примером HTML-фрагмента
 //@import './example';
+@import './base/container';
 
 @import './utils/variables';
 @import './utils/common';
 @import './utils/functions';
 
 @import './components/modal-auth';
+
+
+@import './layouts/header';
