--- a/src/partials/modal-auth.html
+++ b/src/partials/modal-auth.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="form__element">
-        <button class="btn__submit" type="submit">LOG IN</button>
+        <button class="btn__submit" type="submit" disabled>LOG IN</button>
       </div>
 
       <div class="form__element">
@@ -84,7 +84,7 @@
       </div>
 
       <div class="form__element">
-        <button class="btn__submit" type="submit">SIGN UP</button>
+        <button class="btn__submit" type="submit" disabled>SIGN UP</button>
       </div>
     </form>
   </div>
