--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="container header__cover home-open">
+    <div class="wrapper header__cover home-open">
         <div class="header__list-cover">
             <a class="logo__link" href="#">
                     <svg class="logo__icon" width = "24px" height = "22px">
