--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,6 @@
 
 // Стили для файла с примером HTML-фрагмента
 //@import './example';
-@import './base/container';
 
 @import './utils/variables';
 @import './utils/common';
@@ -14,4 +13,4 @@
 @import './components/modal-auth';
 
 
-@import './layouts/header';
+@import './components/header';
