--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,4 +1,4 @@
-.preloader {
+.prfeloader {
   position: fixed;
   left: 0;
   top: 0;
@@ -10,7 +10,7 @@
   opacity: 0.1;
   visibility: visible;
 
-  .loader {
+  .lfoader {
     width: 75px;
     height: 75px;
     border: 10px solid white;
