--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,5 @@
 @import './utils/functions';
 
 @import './components/modal-auth';
-@import './components/loader'
+@import './components/loader';
+@import './components/header';
