--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -42,14 +42,21 @@ img {
 }
 // ==================================================================
 .wrapper {
-  min-width: 320px;
-  padding: 0 20px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 
+  @media screen and (min-width: 320px) {
+    min-width: 320px;
+    max-width: 767px;
+  padding: 0 20px;
+  }
   @media screen and (min-width: 768px) {
+    min-width: 768px;
     padding: 0 75px;
   }
   @media screen and (min-width: 1024px) {
-    width: 1024px;
+    max-width: 1024px;
     padding: 0 71px;
   }
 }
