--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,4 +1,4 @@
-.prfeloader {
+/*.preloader {
   position: fixed;
   left: 0;
   top: 0;
@@ -10,7 +10,7 @@
   opacity: 0.1;
   visibility: visible;
 
-  .lfoader {
+  .loader {
     width: 75px;
     height: 75px;
     border: 10px solid white;
@@ -26,7 +26,7 @@
       visibility: hidden;
     }
   }
-}
+}*/
 
 @keyframes spin {
   from {
