--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -46,6 +46,10 @@ img {
   margin-right: auto;
   margin-left: auto;
 
+  @media screen and (max-width:319px){
+    width: 320px;
+    padding: 0 20px;
+  }
   @media screen and (min-width: 320px) {
     min-width: 320px;
     max-width: 767px;
@@ -53,6 +57,7 @@ img {
   }
   @media screen and (min-width: 768px) {
     min-width: 768px;
+    max-width: 1023px;
     padding: 0 75px;
   }
   @media screen and (min-width: 1024px) {
