--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header class="header">
-    <div class="wrapper header__cover home-open">
-        <div class="header__list-cover">
-            <a class="logo__link" href="#">
-                    <svg class="logo__icon" width = "24px" height = "22px">
-                        <use href="./images/header-images/symbol-defs.svg#icon-filmstrip"></use>
-                    </svg>
-                Filmoteka
-            </a>
-            <span class="user__name is-none">@UserName@</span>
+  <div class="wrapper header__cover home-open">
+    <div class="header__list-cover">
+      <a class="logo__link" href="#">
+        <svg class="logo__icon" width="24px" height="22px">
+          <use href="./images/header-images/symbol-defs.svg#icon-filmstrip"></use>
+        </svg>
+        Filmoteka
+      </a>
+      <!--<span class="user__name is-none">@UserName@</span>
             <ul class="reg__list">
                 <li class="nav__item reg__item ">
                     <button class="nav__btn first reg__btn" data-action="login">Log in</button>
@@ -15,36 +15,46 @@
                 <li class="nav__item reg__item">
                     <button class="nav__btn reg__btn" data-action="register">Sign up</button>
                 </li>
-            </ul>
-            <ul class="nav__list">
-                
-                <li class="nav__item">
-                    <button class="nav__btn current" data-action="to-home">Home</button>
-                </li>
-                <li class="nav__item">
-                    <button class="nav__btn" data-action="to-library">My library</button>
-                </li>
-            </ul>
-        </div>
-           <div class="home__block">
-            <div class="inp_lab">
-                <input type="text" placeholder="Поиск фильмов" class="searching__input">
-            <button type="button" class="searching__button" aria-expanded="false">
-                <svg class="menu__btn__icon" width = "12px" height = "12px">
-                    <use xlink:href="./images/header-images/symbol-defs.svg#icon-magnifier"></use>
-                </svg>
-            </button>
-            </div>
-            <p class="searching__error__text is-visible">Search result not successful. Enter the correct movie name and</p>
-           </div>
-            <!--Cabinet part-->
-            <ul class="library__btn__list library__block is-none">
-                <li class="library__btn__item">
-                    <button class="library__btn" data-action="open-watched-list">Watched</button>
-                </li>
-                <li class="library__btn__item">
-                    <button class="library__btn" data-action="open-queue-list">Queue</button>
-                </li>
-            </ul>
+            </ul>-->
+
+      <ul class="reg__list">
+        <li class="nav__item reg__item">
+          <span class="user__name"></span>
+        </li>
+        <li class="nav__item reg__item">
+          <button class="nav__btn first reg__btn" data-action="login">Log in</button>
+        </li>
+      </ul>
+      <ul class="nav__list">
+        <li class="nav__item">
+          <button class="nav__btn current" data-action="to-home">Home</button>
+        </li>
+        <li class="nav__item">
+          <button class="nav__btn" data-action="to-library">My library</button>
+        </li>
+      </ul>
     </div>
+    <div class="home__block">
+      <div class="inp_lab">
+        <input type="text" placeholder="Поиск фильмов" class="searching__input" />
+        <button type="button" class="searching__button" aria-expanded="false">
+          <svg class="menu__btn__icon" width="12px" height="12px">
+            <use xlink:href="./images/header-images/symbol-defs.svg#icon-magnifier"></use>
+          </svg>
+        </button>
+      </div>
+      <p class="searching__error__text is-visible">
+        Search result not successful. Enter the correct movie name and
+      </p>
+    </div>
+    <!--Cabinet part-->
+    <ul class="library__btn__list library__block is-none">
+      <li class="library__btn__item">
+        <button class="library__btn" data-action="open-watched-list">Watched</button>
+      </li>
+      <li class="library__btn__item">
+        <button class="library__btn" data-action="open-queue-list">Queue</button>
+      </li>
+    </ul>
+  </div>
 </header>
