--- a/src/sass/components/_modal-auth.scss
+++ b/src/sass/components/_modal-auth.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   width: 100vw;
 
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: $overlay-bg-color;
 
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -38,8 +38,7 @@
   box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
 
   opacity: 1;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms $primary-animation, opasity 250ms $primary-animation;
 }
 .btn__close {
   display: flex;
@@ -60,7 +59,7 @@
   // transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover svg {
-    color: royalblue;
+    color: royalblue; //не работает...почему???
   }
 }
 
