--- a/src/partials/movie-modal.html
+++ b/src/partials/movie-modal.html
@@ -4,5 +4,44 @@
     <div class="movie-modal__pic">
       <img src="https://www.themoviedb.org/t/p/w1280/66RvLrRJTm4J8l3uHXWF09AICol.jpg" alt="">
     </div>
+    <div class="movie-modal__desc">
+      <h2 class="movie-modal__title">Fight Club</h2>
+      <ul class="movie-modal__info">
+        <li class="movie-modal__info-item">
+          Vote / votes
+          <span class="movie-modal__span movie-modal__span--vote">7.8</span>
+          <span class="movie-modal__span movie-modal__span--slash">/</span>
+          <span class="movie-modal__span movie-modal__span--votes">3439</span>
+        </li>
+        <li class="movie-modal__info-item">
+          Popularity
+          <span class="movie-modal__span movie-modal__span--popularity">0.5</span>
+        </li>
+        <li class="movie-modal__info-item">
+          Original title
+          <span class="movie-modal__span movie-modal__span--original-title">
+            Fight club
+          </span>
+        </li>
+        <li class="movie-modal__info-item">
+          Genre
+          <span class="movie-modal__span movie-modal__span--genre">
+            Drama
+          </span>
+        </li>
+      </ul>
+      <div class="movie-modal__about">
+        <h3 class="movie-modal__title movie-modal__title--about">About</h3>
+        <p class="movie-modal__about-text">
+          A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of
+          therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in
+          the way and ignites an out-of-control spiral toward oblivion.
+        </p>
+      </div>
+      <div class="movie-modal__btns">
+        <button class="movie-modal__btn-add">Add to watched</button>
+        <button class="movie-modal__btn-add">Add to que</button>
+      </div>
+    </div>
   </div>
 </div>
