--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,22 +7,15 @@
         </svg>
         Filmoteka
       </a>
-      <!--<span class="user__name is-none">@UserName@</span>
-            <ul class="reg__list">
-                <li class="nav__item reg__item ">
-                    <button class="nav__btn first reg__btn" data-action="login">Log in</button>
-                </li>
-                <li class="nav__item reg__item">
-                    <button class="nav__btn reg__btn" data-action="register">Sign up</button>
-                </li>
-            </ul>-->
-
       <ul class="reg__list">
         <li class="nav__item reg__item">
           <span class="user__name"></span>
         </li>
         <li class="nav__item reg__item">
           <button class="nav__btn first reg__btn" data-action="login">Log in</button>
+        </li>
+        <li class="nav__item reg__item">
+          <button class="nav__btn reg__btn is-none" data-action="loguot">Log out</button>
         </li>
       </ul>
       <ul class="nav__list">
