--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,5 @@
 @import './components/header';
 @import './components/modal-auth';
 @import './components/loader';
+
+@import './components/search';
