--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,259 +1,261 @@
 //full header cover
-.home-open{
-    background:  linear-gradient(to left, $overlay-bg-color 40%, $overlay-bg-color 100%), url('.././images/header-images/desktop/header-home-desktop1x.jpg');
+.home-open {
+  background: linear-gradient(
+      to left,
+      $overlay-bg-color 40%,
+      $overlay-bg-color 100%
+    ),
+    url('.././images/header-images/desktop/header-home-desktop1x.jpg');
 }
 
-
-.header__cover{
-    
-
-    @media screen and(min-width:320px){
-        padding: 46px 21px 43px;
-    }
-    @media screen and(min-width:768px){
-        padding: 41px 71px 59px;
-    }
-    @media screen and(min-width:1024px){
-    
-    }
+.header__cover {
+  @media screen and(min-width:320px) {
+    padding: 46px 21px 43px;
+  }
+  @media screen and(min-width:768px) {
+    padding: 41px 71px 59px;
+  }
+  @media screen and(min-width:1024px) {
+  }
 }
 //list cover
-.header__list-cover{
-    display: flex;
+.header__list-cover {
+  display: flex;
 
-    align-items: center;
+  align-items: center;
 }
 
 //logo part
 
-.logo__link{
-    margin-left: 10px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 35px;
-    fill: $thirty-text-color;
-    color: $secondary-text-color;
-    transition: $primary-animation;
-    transition-duration: .25s;
-    transition-property: color, fill;
-    
+.logo__link {
+  margin-left: 10px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  fill: $thirty-text-color;
+  color: $secondary-text-color;
+  transition: $primary-animation;
+  transition-duration: 0.25s;
+  transition-property: color, fill;
 
-   &:hover, &:focus{
-       fill: $hover-accent-bg-color;
-       color: $hover-accent-bg-color;
-   }
+  &:hover,
+  &:focus {
+    fill: $hover-accent-bg-color;
+    color: $hover-accent-bg-color;
+  }
 }
-
 
 //nav list part
-.nav__list{
-    display: flex;
-    margin-right: 0;
+.nav__list {
+  display: flex;
+  margin-right: 0;
 }
 
-.nav__item{
-    display: flex;
-    align-items: center;
-    position: relative;
+.nav__item {
+  display: flex;
+  align-items: center;
+  position: relative;
 
-    & + & {
-        margin-left: 15px;
-    }
+  & + & {
+    margin-left: 15px;
+  }
 }
 
-.first{
-        &::after{
-            position: absolute;
-            content: "";
-            height: 100%;
-            width: 1px;
-            margin-right: 10px;
-            background-color: $hover-accent-bg-color;
-            margin-left: 5px;
-            margin-right: 5px;
-        }
+.first {
+  &::after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 1px;
+    margin-right: 10px;
+    background-color: $hover-accent-bg-color;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
 
-.nav__btn{
-    padding: 0;
-    border: none;
-    background-color: transparent;  
+.nav__btn {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  background-color: transparent;
+  background-color: transparent;
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: center;
-    text-transform: uppercase;
-    color: $secondary-text-color;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  color: $secondary-text-color;
 
-    position: relative;
+  position: relative;
 
-    transition: $primary-animation;
-    transition-duration: .25s;
-    transition-property: color;
+  transition: $primary-animation;
+  transition-duration: 0.25s;
+  transition-property: color;
 
-    &:hover, &:focus{
-        color: $hover-accent-bg-color;
-        cursor: pointer;
-    }
+  &:hover,
+  &:focus {
+    color: $hover-accent-bg-color;
+    cursor: pointer;
+  }
 
-    &.current::after{
-        position: absolute;
-        content: "";
+  &.current::after {
+    position: absolute;
+    content: '';
 
-        display: block;
-        width: 100%;
-        height: 3px;
-        background-color: $hover-accent-bg-color;
-    }
-
-    
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: $hover-accent-bg-color;
+  }
 }
 
 //reg list
-.reg__list{
-    display: flex;
-    margin-right: 20px;
-    margin-left: auto;
+.reg__list {
+  display: flex;
+  margin-right: 20px;
+  margin-left: auto;
 }
 
-.reg__item{
-    & + &{
-        margin-left: 10px;
-    }
+.reg__item {
+  & + & {
+    margin-left: 10px;
+  }
 }
 
 //user__name
-.user__name{
-    color: $secondary-text-color;
-    margin-right: 15px;
-    margin-left: auto;
-    font-size: 12px;
-    line-height: 16px;
+.user__name {
+  color: $secondary-text-color;
+  margin-right: 15px;
+  margin-left: auto;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 //searching part
-.inp_lab{
-   max-width: 336px;
-    position: relative;
-    margin: 34px auto 22px;
+.inp_lab {
+  max-width: 336px;
+  position: relative;
+  margin: 34px auto 22px;
 }
 
-.searching__input{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.searching__input {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 
-    font-size: $primary-font-size;
-    line-height: 16.41px;
+  font-size: $primary-font-size;
+  line-height: 16.41px;
 
-    background-color: transparent;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    outline: transparent;
+  background-color: transparent;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  outline: transparent;
 
-    border-bottom-color: $secondary-text-color;
+  border-bottom-color: $secondary-text-color;
 
-    color: $secondary-text-color;
+  color: $secondary-text-color;
 
-    &:focus{
-        border-bottom-color: $hover-accent-bg-color;
-    }
+  &:focus {
+    border-bottom-color: $hover-accent-bg-color;
+  }
 
-    @media screen and(min-width:320px){
-        width: 280px;
-    }
-    @media screen and(min-width:768px){
-        width: 336px;
-    }
+  @media screen and(min-width:320px) {
+    width: 280px;
+  }
+  @media screen and(min-width:768px) {
+    width: 336px;
+  }
 }
 
 //search btn
 
-.searching__button{
-    border: transparent;
-    background-color: transparent;
-    padding: 0;
-    
-    position: absolute;
-    top: 0%;
-    right: 5px;
-    fill: $secondary-text-color;
+.searching__button {
+  border: transparent;
+  background-color: transparent;
+  padding: 0;
 
-    transition: $primary-animation;
-    transition-duration: .25s;
-    transition-property: fill;
+  position: absolute;
+  top: 0%;
+  right: 5px;
+  fill: $secondary-text-color;
 
-    &:hover, &:focus{
-        cursor: pointer;
-        fill: $hover-accent-bg-color;
-    }
+  transition: $primary-animation;
+  transition-duration: 0.25s;
+  transition-property: fill;
+
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    fill: $hover-accent-bg-color;
+  }
 }
 
+.searching__error__text {
+  color: $error-color;
 
-.searching__error__text{
-    color: $error-color;
-
-    font-size: $primary-font-size;
-    line-height: 16.41px;
-    text-align: center;
+  font-size: $primary-font-size;
+  line-height: 16.41px;
+  text-align: center;
 }
-
 
 //header CABINET part
 
-.cabinet-open{
-    background:  linear-gradient(to left, $overlay-bg-color 40%, $overlay-bg-color 100%), url('.././images/header-images/desktop/header-cab-desktop1x.jpg');
+.cabinet-open {
+  background: linear-gradient(
+      to left,
+      $overlay-bg-color 40%,
+      $overlay-bg-color 100%
+    ),
+    url('.././images/header-images/desktop/header-cab-desktop1x.jpg');
 }
-
 
 //parts
 
-.library__btn__list{
-    display: flex;
-    justify-content: center;
-    margin: 45px auto 6px;
+.library__btn__list {
+  display: flex;
+  justify-content: center;
+  margin: 45px auto 6px;
 }
 
-.library__btn__item:nth-child(2){
-    margin-left: 15px;
+.library__btn__item:nth-child(2) {
+  margin-left: 15px;
 }
 
-.library__btn{
-    width: 136px;
-    height: 44px;
+.library__btn {
+  width: 136px;
+  height: 44px;
 
+  border: 1px solid $secondary-text-color;
+  background-color: transparent;
+  border-radius: 4px;
 
-    border: 1px solid $secondary-text-color;
-    background-color: transparent;
-    border-radius: 4px;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: $secondary-text-color;
+  transition: $primary-animation;
+  transition-duration: 0.25s;
+  transition-property: background-color, box-shadow;
 
-    font-size: 12px;
-    line-height: 16px;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: $secondary-text-color;
-    transition: $primary-animation;
-    transition-duration: .25s;
-    transition-property: background-color, box-shadow;
-
-
-
-    &:hover, &:focus{
-        cursor: pointer;
-        background-color: $hover-accent-bg-color;
-        box-shadow: 0px 0px 43px $hover-accent-bg-color;
-    }
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    background-color: $hover-accent-bg-color;
+    box-shadow: 0px 0px 43px $hover-accent-bg-color;
+  }
 }
 
-.is-none{
-    display: none;
+.is-none {
+  display: none;
 }
 
-.is-visible{
-    opacity: 0;
-    pointer-events: none;
+.is-visible {
+  opacity: 0;
+  pointer-events: none;
 }
