--- a/src/sass/components/_movie-modal.scss
+++ b/src/sass/components/_movie-modal.scss
@@ -9,11 +9,11 @@
   overflow: auto;
   @include animated(opacity);
 
-  &--is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-  }
+  // &--is-hidden {
+  //   visibility: hidden;
+  //   opacity: 0;
+  //   pointer-events: none;
+  // }
 }
 
 .movie-modal {
