--- a/src/templates/movie-modal.hbs
+++ b/src/templates/movie-modal.hbs
@@ -40,8 +40,8 @@
         <p class="movie-modal__about-text">{{overview}}</p>
       </div>
       <div class="movie-modal__btns">
-        <button class="movie-modal__btn-add">Add to watched</button>
-        <button class="movie-modal__btn-add">Add to que</button>
+        <button class="movie-modal__btn-add" data-addToWatched>Add to watched</button>
+        <button class="movie-modal__btn-add" data-addToQueue>Add to queue</button>
       </div>
     </div>
   </div>
