--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,6 +8,7 @@ $secondary-font-size: 16px;
 // ==================================================================
 
 // text colors
+$orange-color: #ff6b08;
 $primary-text-color: #000;
 $secondary-text-color: #fff;
 $thirty-text-color: #545454;
