--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,9 @@
     <div class="header__list-cover">
       <a class="logo__link" href="#">
         <svg class="logo__icon" width="24px" height="22px">
-          <use href="./images/header-images/symbol-defs.svg#icon-filmstrip"></use>
+          <use
+            href="./images/header-images/symbol-defs.svg#icon-filmstrip"
+          ></use>
         </svg>
         Filmoteka
       </a>
@@ -12,10 +14,14 @@
           <span class="user__name"></span>
         </li>
         <li class="nav__item reg__item">
-          <button class="nav__btn first reg__btn" data-action="login">Log in</button>
+          <button class="nav__btn first reg__btn" data-action="login">
+            Log in
+          </button>
         </li>
         <li class="nav__item reg__item">
-          <button class="nav__btn reg__btn is-none" data-action="loguot">Log out</button>
+          <button class="nav__btn reg__btn is-none" data-action="loguot">
+            Log out
+          </button>
         </li>
       </ul>
       <ul class="nav__list">
@@ -29,24 +35,35 @@
     </div>
     <div class="home__block">
       <div class="inp_lab">
-        <input type="text" placeholder="Поиск фильмов" class="searching__input" />
+        <input
+          data-input
+          type="text"
+          placeholder="Поиск фильмов"
+          class="searching__input"
+        />
         <button type="button" class="searching__button" aria-expanded="false">
           <svg class="menu__btn__icon" width="12px" height="12px">
-            <use xlink:href="./images/header-images/symbol-defs.svg#icon-magnifier"></use>
+            <use
+              xlink:href="./images/header-images/symbol-defs.svg#icon-magnifier"
+            ></use>
           </svg>
         </button>
       </div>
-      <p class="searching__error__text is-visible">
+      <p class="searching__error__text is-visible" data-error>
         Search result not successful. Enter the correct movie name and
       </p>
     </div>
     <!--Cabinet part-->
     <ul class="library__btn__list library__block is-none">
       <li class="library__btn__item">
-        <button class="library__btn" data-action="open-watched-list">Watched</button>
+        <button class="library__btn" data-action="open-watched-list">
+          Watched
+        </button>
       </li>
       <li class="library__btn__item">
-        <button class="library__btn" data-action="open-queue-list">Queue</button>
+        <button class="library__btn" data-action="open-queue-list">
+          Queue
+        </button>
       </li>
     </ul>
   </div>
