--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,4 @@
 @import './components/modal-auth';
 @import './components/movie-modal';
 @import './components/loader';
+@import './components/search.scss';
