--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,3 +1,6 @@
-<div  id="page-preloader" class="preloader">
+<!-- <div  id="page-preloader" class="preloader">
+    <div class="loader"></div>
+</div> -->
+<div class="hide">
     <div class="loader"></div>
 </div>
