--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,13 +1,13 @@
-/*.preloader {
+.hide {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgb(133, 122, 122);
+  background: grey;
   z-index: 2;
-  transition: 1s all;
-  opacity: 0.1;
+  transition: 3s;
+  opacity: 0.7;
   visibility: visible;
 
   .loader {
@@ -15,7 +15,7 @@
     height: 75px;
     border: 10px solid white;
     border-radius: 50%;
-    border-top-color: blue;
+    border-top-color: orange;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -26,7 +26,7 @@
       visibility: hidden;
     }
   }
-}*/
+}
 
 @keyframes spin {
   from {
