--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,4 @@
 @import './components/movie-modal';
 @import './components/loader';
 @import './components/search.scss';
+@import './components/main';
