add forgot pass

--- a/src/partials/modal-auth.html
+++ b/src/partials/modal-auth.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="form__element">
-        <a href="#"> Forgot password? </a>
+        <a class="to_change-pass" href="#"> Forgot password? </a>
         <a class="to_signup" href="#signup"> Create an Account </a>
       </div>
     </form>
