--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,12 +1,6 @@
 <main class="main">
-    <div class="container wrapper"> 
-
-    
-
-        <ul class="gallery" id="gallery">
-            
-        </ul>
-    </div>
-            <div id="tui-pagination-container" class="tui-pagination"></div>
-
+  <div class="container wrapper">
+    <ul class="gallery" id="gallery"></ul>
+  </div>
+  <div id="tui-pagination-container" class="tui-pagination"></div>
 </main>
