--- a/src/partials/search-films-gallery.html
+++ b/src/partials/search-films-gallery.html
@@ -1,20 +1,9 @@
-<section class="container__search">
+<!-- <section class="container__search">
   <ul class="gallery-list"></ul>
-</section>
-
-<div class="preloader is-hidden">
-  <div class="sk-fading-circle spinner">
-    <div class="sk-circle1 sk-circle"></div>
-    <div class="sk-circle2 sk-circle"></div>
-    <div class="sk-circle3 sk-circle"></div>
-    <div class="sk-circle4 sk-circle"></div>
-    <div class="sk-circle5 sk-circle"></div>
-    <div class="sk-circle6 sk-circle"></div>
-    <div class="sk-circle7 sk-circle"></div>
-    <div class="sk-circle8 sk-circle"></div>
-    <div class="sk-circle9 sk-circle"></div>
-    <div class="sk-circle10 sk-circle"></div>
-    <div class="sk-circle11 sk-circle"></div>
-    <div class="sk-circle12 sk-circle"></div>
+</section> -->
+<main class="main">
+  <div class="container wrapper">
+    <ul class="gallery-list" id="gallery"></ul>
   </div>
-</div>
+  <div id="tui-pagination-container" class="tui-pagination"></div>
+</main>
