--- a/src/partials/search-films-gallery.html
+++ b/src/partials/search-films-gallery.html
@@ -1,9 +1,3 @@
-<!-- <section class="container__search">
-  <ul class="gallery-list"></ul>
-</section> -->
-<main class="main">
-  <div class="container wrapper">
-    <ul class="gallery-list" id="gallery"></ul>
-  </div>
-  <div id="tui-pagination-container" class="tui-pagination"></div>
-</main>
+<section class="container__search">
+  <ul class="gallery-list" id="gallery"></ul>
+</section>
