--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -23,6 +23,9 @@ $secondary-bg-color: #f7f7f7;
 $accent-bg-color: #ff6b08;
 $hover-accent-bg-color: #ff6b01;
 $error-color: #ff001b;
+$overlay-orange:#ff6b08bd;
+$team-block:rgb(6, 0, 56);
+$team-back:rgba(0, 0, 0, 0.911);
 // ==================================================================
 
 // animations
