--- a/src/partials/search-films-gallery.html
+++ b/src/partials/search-films-gallery.html
@@ -1,3 +1,3 @@
 <section class="container__search">
-  <ul class="gallery-list" id="gallery"></ul>
+  <ul class="gallery-list" id=""></ul>
 </section>
