--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,3 +17,5 @@
 @import './components/search.scss';
 @import './components/main';
 @import './components/footer';
+
+@import './components/back-to-top';
