Tanko -main fixed part

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,70 +27,49 @@
         <ul class="team__list">
             <li class="team__item">
                 <div class="person">
-                    <picture>
-                        <source srcset="./images/DreamTeam/Elena.jpeg 1x, ./images/DreamTeam/Elena2x.jpg 2x">
-                        <img src="./images/DreamTeam/Elena2x.jpg" alt="Elena" class="person__photo">
-                    </picture>
-                 <h3 class="person__name">Мазуренко Елена</h3>
-                </div>
-                <p class="person__job">Team Leader</p>
-            </li>
-            <li class="team__item">
-                <div class="person">
-                    <picture>
-                        <source srcset="./images/DreamTeam/Michael.jpg 1x, ./images/DreamTeam/Michael2x.jpg 2x">
-                        <img src="./images/DreamTeam/Michael2x.jpg" alt="Michael" class="person__photo">
-                    </picture>
-                 <h3 class="person__name">Гонык Михаил</h3>
-                </div>
-                <p class="person__job">Scrum Master</p>
-            </li>
-            <li class="team__item">
-                <div class="person">
-                    <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana2x.jpg" alt="Tatyana" class="person__photo">
-                    </picture>
-                 <h3 class="person__name">Танько Татьяна</h3>
-                </div>
-                <p class="person__job">Developer</p>
-            </li>
-            <li class="team__item">
-                <div class="person">
-                    <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
-                    </picture>
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
                  <h3 class="person__name">@Name@</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
-                   <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
-                    </picture>
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
                  <h3 class="person__name">@Name@</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
-                   <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
-                    </picture>
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
                  <h3 class="person__name">@Name@</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
-                   <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
-                    </picture>
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
+                 <h3 class="person__name">@Name@</h3>
+                </div>
+                <p class="person__job">Developer</p>
+            </li>
+            <li class="team__item">
+                <div class="person">
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
+                 <h3 class="person__name">@Name@</h3>
+                </div>
+                <p class="person__job">Developer</p>
+            </li>
+            <li class="team__item">
+                <div class="person">
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
+                 <h3 class="person__name">@Name@</h3>
+                </div>
+                <p class="person__job">Developer</p>
+            </li>
+            <li class="team__item">
+                <div class="person">
+                   <img src="https://files.fm/thumb_show.php?i=syvvcceab" alt="developer" class="person__photo">
                  <h3 class="person__name">@Name@</h3>
                 </div>
                 <p class="person__job">Developer</p>
