--- a/src/sass/components/_modal-auth.scss
+++ b/src/sass/components/_modal-auth.scss
@@ -56,8 +56,8 @@
   cursor: pointer;
 
   // transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  & svg {
+  &:hover svg {
+    fill: $accent-bg-color;
   }
 }
 
