--- a/src/sass/components/theme-changer.scss
+++ b/src/sass/components/theme-changer.scss
@@ -16,7 +16,7 @@
   .theme-switch {
     display: flex;
     align-items: center;
-    margin-left: 40px;
+    justify-content: flex-end
   }
   
   .theme-switch__icon {
