--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -13,9 +13,13 @@
   margin: 20px;
   transform: scale(1);
   transition: transform 150ms linear;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;					 
 
   &:hover {
-    cursor: grab;
+    cursor: pointer;
     transform: scale(1.04);
   }
 }
@@ -39,6 +43,7 @@
   line-height: 1.14;
   margin-bottom: 5px;
   text-transform: uppercase;
+  width: 280px;				
 }
 
 .gallery__text {
@@ -46,6 +51,7 @@
   font-size: 12px;
   line-height: 1.14;
   color: $orange-color;
+  width: 280px;			  
 }
 
 .gallery__rating {
@@ -77,7 +83,7 @@
     margin: 15px;
   }
 
-  .gallery__image {
+  .gallery__image,.gallery__text,.gallery__title {
     width: 294px;
   }
 }
@@ -99,7 +105,7 @@
     width: calc((100% - 3 * 30px) / 3);
   }
 
-  .gallery__image {
+  .gallery__image,.gallery__text,.gallery__title{
     width: 274px;
   }
 } ;
