add btn +/- and logic +

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,5 +2,8 @@
   <div class="container wrapper">
     <ul class="gallery" id="gallery"></ul>
   </div>
-  <div id="tui-pagination-container" class="tui-pagination"></div>
+  <div id="tui-pagination-container" class="tui-pagination">
+    <button data-action="back">-</button>
+    <button data-action="forward">+</button>
+  </div>
 </main>
