--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,6 +1,4 @@
-<!-- <div  id="page-preloader" class="preloader">
-    <div class="loader"></div>
-</div> -->
-<div class="hide">
-    <div class="loader"></div>
+
+<div class="loader">
+    <div class="circle "></div>
 </div>
