--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,38 +1,101 @@
-.hide {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
-  background: grey;
-  z-index: 2;
-  transition: 3s;
-  opacity: 0.7;
-  visibility: visible;
-
-  .loader {
-    width: 75px;
-    height: 75px;
-    border: 10px solid white;
-    border-radius: 50%;
-    border-top-color: orange;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    animation: 2s spin infinite linear;
-    &.done {
-      opacity: 0;
-      visibility: hidden;
-    }
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  opacity: 0;
+  z-index: 5;
+  pointer-events: none;
+  &.is-loader-open {
+    opacity: 1;
+    pointer-events: initial;
   }
 }
+.circle {
+  animation: resize 1s linear infinite;
+  position: relative;
+  background: #ec8729ec;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  &::after {
+    animation: rotate 1s linear infinite;
+    content: '';
+    display: block;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    border: 10px solid transparent;
+    border-top-color: #6d6875;
+    border-radius: 50%;
+  }
+}
+@keyframes rotate {
+  0% {
+  }
+  70% {
+    transform: rotate(250deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes resize {
+  40% {
+    transform: scale(1);
+  }
+  70% {
+    transform: scale(1.1);
+  }
+}
+// .loader {
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: grey;
+//   z-index: 2;
+//   transition: 3s;
+//   opacity: 0.7;
+//   visibility: visible;
 
-@keyframes spin {
-  from {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
-  }
-} ;
+//   .circle {
+//     width: 75px;
+//     height: 75px;
+//     border: 10px solid white;
+//     border-radius: 50%;
+//     border-top-color: orange;
+//     position: absolute;
+//     left: 50%;
+//     top: 50%;
+//     transform: translate(-50%, -50%);
+//     animation: 2s spin infinite linear;
+//     &.done {
+//       opacity: 0;
+//       visibility: hidden;
+//     }
+//   }
+// }
+
+// @keyframes spin {
+//   from {
+//     transform: translate(-50%, -50%) rotate(0deg);
+//   }
+//   to {
+//     transform: translate(-50%, -50%) rotate(360deg);
+//   }
+// }
+
+// .hidden {
+//   pointer-events: none;
+//   opacity: 0;
+// }
