--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,4 +1,3 @@
-
-<div class="loader">
-    <div class="circle "></div>
+<div class="preloader" id="page-preloader">
+    <div class="loader"></div>
 </div>
