--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,7 @@
                 <use href="./images/header-images/act.svg#icon-x" width="34px" height="34px"></use>
             </svg>
         </button>
-        <h1 class="team__title">Team #7</h1>
+        <h2 class="team__title">Team #7</h2>
         <ul class="team__list">
             <li class="team__item">
                 <div class="person">
@@ -31,7 +31,7 @@
                         <source srcset="./images/DreamTeam/Elena.jpeg 1x, ./images/DreamTeam/Elena2x.jpg 2x">
                         <img src="./images/DreamTeam/Elena2x.jpg" alt="Elena" class="person__photo">
                     </picture>
-                 <h3 class="person__name">Мазуренко Елена</h3>
+                 <h3 class="person__name">Елена М.</h3>
                 </div>
                 <p class="person__job">Team Leader</p>
             </li>
@@ -41,7 +41,7 @@
                         <source srcset="./images/DreamTeam/Michael.jpg 1x, ./images/DreamTeam/Michael2x.jpg 2x">
                         <img src="./images/DreamTeam/Michael2x.jpg" alt="Michael" class="person__photo">
                     </picture>
-                 <h3 class="person__name">Гонык Михаил</h3>
+                 <h3 class="person__name">Михаил Г.</h3>
                 </div>
                 <p class="person__job">Scrum Master</p>
             </li>
@@ -51,47 +51,47 @@
                         <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
                         <img src="./images/DreamTeam/Tatyana2x.jpg" alt="Tatyana" class="person__photo">
                     </picture>
-                 <h3 class="person__name">Танько Татьяна</h3>
+                 <h3 class="person__name">Татьяна Т.</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
                     <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
+                        <source srcset="./images/DreamTeam/Alexander.jpg 1x, ./images/DreamTeam/Alexandr2x.jpg 2x">
+                        <img src="./images/DreamTeam/Alexandr2x.jpg" alt="Alexander" class="person__photo">
                     </picture>
-                 <h3 class="person__name">@Name@</h3>
+                 <h3 class="person__name">Александр С.</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
                    <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
+                        <source srcset="./images/DreamTeam/Anastasia.jpg 1x, ./images/DreamTeam/Anastasia2x.jpg 2x">
+                        <img src="./images/DreamTeam/Anastasia2x.jpg" alt="Anastasia" class="person__photo">
                     </picture>
-                 <h3 class="person__name">@Name@</h3>
+                 <h3 class="person__name">Анастасия Р.</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
                    <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
+                        <source srcset="./images/DreamTeam/Alexei.jpg 1x, ./images/DreamTeam/Alexei2x.jpg 2x">
+                        <img src="./images/DreamTeam/Alexei2x.jpg" alt="Tatyana" class="person__photo">
                     </picture>
-                 <h3 class="person__name">@Name@</h3>
+                 <h3 class="person__name">Алексей Т.</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
             <li class="team__item">
                 <div class="person">
                    <picture>
-                        <source srcset="./images/DreamTeam/Tatyana.jpg 1x, ./images/DreamTeam/Tatyana2x.jpg 2x">
-                        <img src="./images/DreamTeam/Tatyana.jpg" alt="Tatyana" class="person__photo">
+                        <source srcset="./images/DreamTeam/Samuel.jpg 1x, ./images/DreamTeam/Samuel2x.jpg 2x">
+                        <img src="./images/DreamTeam/Samuel2x.jpg" alt="Samuel" class="person__photo">
                     </picture>
-                 <h3 class="person__name">@Name@</h3>
+                 <h3 class="person__name">Самуэль</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
