--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
             href="./images/header-images/header-sprite.svg#icon-filmstrip"
           ></use>
         </svg>
-       <span class="logo__text">Filmoteka</span>
+       <h1 class="logo__text">Filmoteka</h1>
       </a>
       <ul class="nav__list">
         <li class="nav__item">
