--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -20,6 +20,7 @@
 
 
 .header__cover{
+    position: relative;
     @media screen and(max-width:319px){
         padding: 46px 21px 33px;
     }
@@ -65,6 +66,10 @@
 }
 
 .logo__text{
+
+    font-size: 30px;
+    line-height: 35px;
+    
     @media screen and(max-width:319px){
         display: none;
     }
@@ -300,7 +305,7 @@
 .library__btn__list{
     display: flex;
     justify-content: center;
-    margin: 45px auto 16px;
+    margin: 45px auto 5px;
 }
 
 .library__btn__item:nth-child(2){
