--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -7,7 +7,11 @@
 
   padding-top: 20px;
   padding-bottom: 40px;
+  @media screen and (min-width: 320px) {
+    padding-top: 0;
+  }
 }
+
 
 .gallery__list {
   margin: 20px;
