--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -65,6 +65,17 @@ img {
     padding: 0 71px;
   }
 }
+.main .wrapper {
+  
+  @media screen and (min-width: 768px) {
+  padding: 0 76px;
+  }
+  @media screen and (max-width: 767px) {
+    
+  padding: 0;
+  }
+}
+
 // ==================================================================
 .visualy-hidden {
   position: absolute;
