--- a/src/partials/search-films-gallery.html
+++ b/src/partials/search-films-gallery.html
@@ -1,3 +1,7 @@
 <section class="container__search">
   <ul class="gallery-list" id=""></ul>
+  <!-- <div id="tui-pagination-container" class="tui-pagination">
+    <button data-action="back-search">-</button>
+    <button data-action="forward-search">+</button>
+  </div> -->
 </section>
