add styles for paginations

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/loader';
 @import './components/search.scss';
 @import './components/main';
+@import './components/paginations';
 @import './components/footer';
 
 @import './components/back-to-top';
