--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,8 +2,10 @@
   <div class="container wrapper">
     <ul class="gallery" id="gallery"></ul>
   </div>
+
   <div id="tui-pagination-container" class="tui-pagination">
-    <button data-action="back">-</button>
-    <button data-action="forward">+</button>
+    <button class="btn-arrow" data-action="back">&#8592;</button>
+    <a href="#">......</a>
+    <button class="btn-arrow" data-action="forward">&#8594;</button>
   </div>
 </main>
