--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -6,7 +6,7 @@
   }
 
   padding-top: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .gallery__list {
@@ -16,18 +16,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  display: flex;					 
+  display: flex;
 
   &:hover {
     cursor: pointer;
     transform: scale(1.04);
   }
 }
-
-// .gallery__image-border {
-//   border: 3px;
-//   color: #000;
-// }
 
 .gallery__image {
   width: 280px;
@@ -43,7 +38,7 @@
   line-height: 1.14;
   margin-bottom: 5px;
   text-transform: uppercase;
-  width: 280px;				
+  width: 280px;
 }
 
 .gallery__text {
@@ -51,7 +46,7 @@
   font-size: 12px;
   line-height: 1.14;
   color: $orange-color;
-  width: 280px;			  
+  width: 280px;
 }
 
 .gallery__rating {
@@ -68,7 +63,7 @@
 @media screen and (min-width: 768px) {
   .main {
     padding-top: 60px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
 
   .gallery {
@@ -83,7 +78,9 @@
     margin: 15px;
   }
 
-  .gallery__image,.gallery__text,.gallery__title {
+  .gallery__image,
+  .gallery__text,
+  .gallery__title {
     width: 294px;
   }
 }
@@ -91,7 +88,7 @@
 @media screen and (min-width: 1024px) {
   .main {
     padding-top: 60px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
 
   .gallery {
@@ -105,7 +102,9 @@
     width: calc((100% - 3 * 30px) / 3);
   }
 
-  .gallery__image,.gallery__text,.gallery__title{
+  .gallery__image,
+  .gallery__text,
+  .gallery__title {
     width: 274px;
   }
 } ;
