--- a/src/templates/search-card.hbs
+++ b/src/templates/search-card.hbs
@@ -19,7 +19,7 @@
       />
     {{/unless}}
     <h2 class='gallery__title'>{{title}}</h2>
-         <p class='film-text'><span>{{#each genres}}
+         <p class='gallery__text'><span>{{#each genres}}
             {{name}}<span class='comma'>,</span>
           {{/each}}</span>
         |
