Добавил фото Самуэля

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -91,7 +91,7 @@
                         <source srcset="./images/DreamTeam/Samuel.jpg 1x, ./images/DreamTeam/Samuel2x.jpg 2x">
                         <img src="./images/DreamTeam/Samuel2x.jpg" alt="Samuel" class="person__photo">
                     </picture>
-                 <h3 class="person__name">Самуэль</h3>
+                 <h3 class="person__name">Самуэль Ш.</h3>
                 </div>
                 <p class="person__job">Developer</p>
             </li>
